--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
     "embla-carousel": "^8.5.1",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-class-names": "^8.5.1",
-    "parcel-bundler": "^1.12.5"
+    "parcel-bundler": "^1.12.5",
+    "primeflex": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@iconify-json/material-symbols": "^1.2.10",
+    "gh-pages": "^5.0.0",
     "vite": "^6.0.3"
   }
 }
